fixed contrast

--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -1,6 +1,6 @@
 :root {
     --color-main: #2F4FAA;
-    --color-orange: #FC826A;
+    --color-orange: #fe5c3c;
     --color-white: #FFF;
     --text-heading: 'Montserrat', sans-serif;
     --text-paragraph: 'Roboto', sans-serif;
