--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ header {
 /* Grid */
 
 .grid_container {
-  background: linear-gradient(154deg, var(--color-main), #fc826aba);
+  background: linear-gradient(168deg, var(--color-main), #fc826aba);
   color: var(--color-white);
   display: flex;
   padding: 2rem;
